# docling-rag

./: .dockerignore  .env.example  .env.safety  .env.techpub  .env.test  .gitignore  AIRGAPPED_DEPLOYMENT.md  CLAUDE.md  Dockerfile  INSTALL.md  README-deploy.txt  README.md  claude_desktop_config.example.json  constraints.txt  docker-compose.yml  ingest-techpub.bat  ingest.bat  pyproject.toml  requirements.txt  run-safety.sh  run-techpub.sh  serve.bat
.claude/: settings.local.json
cli/: __main__.py  cli.py
docker/: init.sql
docker/migrations/: 001_rbac.sql  002_normalize_paths.sql
docs/: 1. حادث - خارجي (تصادم جوي فوق نهر بوتوماك).docx  HOW_IT_WORKS.md  JAC Form 385-1 Safety Annual Plan الخطة السنوية للسلامة.docx  JAC Form 385-10  AAR نموذج تقرير ما بعد الفعاليات والتمارين.docx  JAC Form 385-11 INF نموذج الاشعار الفوري للحوادث.docx  JAC Form 385-12 AIIR تقرير التحقيق في الحوادث.docx  JAC Form 385-13 Safety Memomorandum نموذج مذكرة السلامة.docx  JAC Form 385-14 Fire Emer Drill Review تقرير ما بعد تنفيذ خطة الحريق.docx  JAC Form 385-15 Meeting Report نموذج اجتماع ضباط السلامة.docx  JAC Form 385-16 Training Report نموذج التدريب على السلامة.docx  JAC Form 385-17 Safety In-Brief  نموذج التعريف بالسلامة.docx  JAC Form 385-18 Tactical Safety Checklist تقييم إعادة التمركز.docx  JAC Form 385-19 DRAW جدول ضوابط اتخاذ قرارات المخاطر.docx  JAC Form 385-2 Risk Register (HAZLOG) سجل تقييم المخاطر.docx  JAC Form 385-3 Attendance Sheet كشف الحضور.docx  JAC Form 385-4 Protected Record Receipt Form ايصال استلام الوثائق.docx  JAC Form 385-5 IH Survey Form نموذج دراسة الصحة المهنية.docx  JAC Form 385-6 Records of Fire-Fighting Equipment سجلات أنظمة الحريق.docx  JAC Form 385-7 Explosives Facility License رخصة منشأة متفجرة.docx  JAC Form 385-8 Helipad Insp.  تقييم السلامة لمهابط الطائرات العمودية.docx  JAC Form 385-8kb Helipad Insp  تقييم المهابط خاص بالطيارين.docx  JAC Form 385-9 Permit to Work تصريح عمل.docx  JAC Safety Forms List فهرس نماذج قسم السلامة والبيئة والجدارة.docx  MEMORY_LEAK_FIXES.md  MOD Form-1 Safety Forms نماذج السلامة 2022 الادارة التنفيذية من 1 الى 39.docx  MOD Form-10 Lesson Learned Report تقرير درس مستفاد.docx  MOD Form-11 Clearance Certificate شهـادة براءة الذمـة الداخليـة.doc  MOD Form-12 Air Display سلامة العروض العسكرية.docx  MOD Form-2 Annual Safety Report تقرير السلامة السنوي.docx  MOD Form-3 Monthly Safety Report تقرير السلامة الشهري.docx  MOD Form-4 Safety Visit Form نموذج تقرير زيارة.docx  MOD Form-5 Corrective Action Form نموذج متابعة تطبيق الإجراءات التصحيحية.docx  MOD Form-6 Damage Report Form نموذج تقرير أضرار.docx  MOD Form-7 Medical Materials Form المواد الطبية - صناديق الاسعافات الاولية.docx  MOD Form-8 Quarterly  Safety Report تقرير السلامة الربع سنوي.docx  MOD Form-9 Accident Investigation Board Report تقرير هيئة التحقيق.doc  MOD Safety Forms List فهرس نماذج السلامة لوزارة الدفاع.docx  OFFLINE_MODE_FIX.md  Workplace Hazard Control (WHC) Sign_TEMPLATE.docx  أليــــــــة الإبـــــلاغ عن  الحــــــوادث الجديدة الاصدار الثاني.docx  (+2 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Dialog.jsx  DirectoryPicker.jsx  FilePreview.jsx  FoldersPicker.jsx  Layout.jsx
frontend/src/components/ui/: alert.jsx  avatar.jsx  badge.jsx  breadcrumb.jsx  button.jsx  card.jsx  checkbox.jsx  data-table.jsx  dialog.jsx  dropdown-menu.jsx  label.jsx  select.jsx  sheet.jsx  (+2 more)
frontend/src/pages/: ChangePasswordPage.jsx  ChunksPage.jsx  DocumentsPage.jsx  FilesPage.jsx  GroupsPage.jsx  IngestionPage.jsx  LoginPage.jsx  PermissionsPage.jsx  SearchPage.jsx  SettingsPage.jsx  UsersPage.jsx
scripts/: build.py  build_exe.py  create_portable.py  install-remote.ps1  install.bat  install.ps1
src/: config.py  models.py  project.py  query.py  utils.py
src/auth/: auth.py  ldap_client.py
src/dashboard/: app.py  deps.py
src/dashboard/routes/: auth.py  browse.py  chunks.py  files.py  groups.py  ingestion.py  permissions.py  search.py  settings.py  users.py
src/generation/: granite.py
src/ingestion/: audit_log.py  checkpoint.py  chunker.py  document.py  lock.py  parallel_pipeline.py  pipeline.py  progress.py  status.py
src/mcp/: health.py  monitoring.py  server.py  status.py
src/retrieval/: search.py
src/storage/: bm25_index.py  chroma_client.py  postgres.py
tests/: test_bm25_sqlite.py  test_parallel_checkpoint.py  test_parallel_ingestion.py  test_permission_http.py  test_permission_visibility.py
