[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "cli", "config"]

[project]
name = "docling-rag"
version = "0.1.0"
description = "Production-ready RAG system with Docling and ChromaDB"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.68.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.5",
    "torch>=2.2",
    "langdetect>=1.0.9",
    "fastmcp>=0.4",
    "typer>=0.12",
    "rich>=13.0",
    "tqdm>=4.65",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rank-bm25>=0.2.2",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.9",
]
# GPU support - install with: pip install docling-rag[gpu]
# Note: For CUDA, you may need to install PyTorch separately:
#   pip install torch --index-url https://download.pytorch.org/whl/cu121
gpu = [
    "accelerate>=0.25.0",
]

[project.scripts]
rag = "cli.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

