[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "cli", "config"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "cli/",
    "config/",
    "models/.gitkeep",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[project]
name = "docling-rag"
version = "0.1.0"
description = "Production-ready RAG system with Docling and ChromaDB"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "latent-system-notes", email = "latent.system.notes@gmail.com"}
]
keywords = ["rag", "docling", "chromadb", "mcp", "document-processing", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "docling>=2.68.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.5",
    "torch>=2.2",
    "langdetect>=1.0.9",
    "fastmcp>=0.4",
    "typer>=0.12",
    "rich>=13.0",
    "tqdm>=4.65",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rank-bm25>=0.2.2",
    "pypdf>=4.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "mypy>=1.9",
    "pytest>=8.0",
]
# GPU support - install with: pip install docling-rag[gpu]
gpu = [
    "accelerate>=0.25.0",
]
# For building standalone executables
build = [
    "pyinstaller>=6.0",
    "nuitka>=2.0",
]

[project.urls]
Homepage = "https://github.com/latent-system-notes/docling-rag"
Documentation = "https://github.com/latent-system-notes/docling-rag#readme"
Repository = "https://github.com/latent-system-notes/docling-rag"
Issues = "https://github.com/latent-system-notes/docling-rag/issues"

[project.scripts]
rag = "cli.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

