[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "cli"]

[project]
name = "docling-rag"
version = "0.1.0"
description = "RAG system with Docling and ChromaDB"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.70",
    "chromadb>=1.4",
    "sentence-transformers>=5.0",
    "torch>=2.10",
    "langdetect>=1.0.9",
    "fastmcp>=2.0",
    "typer>=0.19",
    "rich>=13.9",
    "tqdm>=4.67",
    "pydantic>=2.12",
    "pydantic-settings>=2.12",
    "python-dotenv>=1.2",
    "rank-bm25>=0.2.2",
    "pypdf>=6.0",
    "rapidocr>=3.5",
    "onnxruntime>=1.23",
    "pywin32>=311; sys_platform == 'win32'",
]

[project.optional-dependencies]
gpu = [
    "accelerate>=1.12",
    "onnxruntime-gpu>=1.23",
]

[project.scripts]
rag = "cli.cli:app"
